<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelId"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelJobName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewJobName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelMachineState"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/machine_state"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewMachineState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelMachineSpeed"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/machine_speed"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewMachineSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelInputCounter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/input_counter"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewInputCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewLabelOutputCounter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/output_counter"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewOutputCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelCuttingForce"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/cutting_force"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewCuttingForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_normal_stopped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_stop_red_75dp" />

            <TextView
                android:id="@+id/text_normal_stopped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Stopped"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_urgent_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_play_arrow_yellow_75dp" />

            <TextView
                android:id="@+id/text-urgent_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Setting up"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_play_arrow_blue_75dp" />

            <TextView
                android:id="@+id/text_running"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Running"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_producing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_play_arrow_green_75dp" />

            <TextView
                android:id="@+id/text_producing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Producing"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/image_shutdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_power_settings_new_grey_75dp" />

            <TextView
                android:id="@+id/text_shutdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Shutdown"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="0"
            android:gravity="right|end"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/image_normal_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_error_yellow_96dp" />

                <TextView
                    android:id="@+id/text_normal_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Stop"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_urgent_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_new_releases_red_96dp" />

                <TextView
                    android:id="@+id/text-urgent_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Urgent Stop"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/image_defect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_warning_yellow_96dp" />

                <TextView
                    android:id="@+id/text_defect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Defect"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_fast_forward_red_96dp" />

                <TextView
                    android:id="@+id/text_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Too Fast"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/image_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_pan_tool_yellow_96dp" />

                <TextView
                    android:id="@+id/text_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Open"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/image_cut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_vertical_align_center_red_96dp" />

                <TextView
                    android:id="@+id/text_cut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Pressure"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
